feat: complete stage 3 authorization
